--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
- <!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%- metaTitle %></title>
+    <title>Prabin Banstola</title>
 
-    <meta property="title" content="<%- metaTitle %>" />
-    <meta name="description" content="<%- metaDescription %>" />
+    <!-- Meta Tags for SEO -->
+    <meta name="description" content="This is the personal website of Prabin Banstola, showcasing my skills and projects." />
 
-    <meta itemprop="name" content="<%- metaTitle %>" />
-    <meta itemprop="description" content="<%- metaDescription %>" />
-    <meta itemprop="image" content="<%- metaImageURL %>" />
+    <!-- Open Graph (OG) Tags for Social Media -->
+    <meta property="og:title" content="Prabin Banstola" />
+    <meta property="og:description" content="This is the personal website of Prabin Banstola, showcasing my skills and projects." />
+    <meta property="og:image" content="/default-og-image.jpg" /> <!-- Replace with your image URL if needed -->
+    <meta property="og:image:secure_url" content="/default-og-image.jpg" /> <!-- Replace with your image URL if needed -->
 
-    <meta property="og:title" content="<%- metaTitle %>" />
-    <meta property="og:description" content="<%- metaDescription %>" />
-    <meta property="og:image" content="<%- metaImageURL %>" />
-    <meta property="og:image:secure_url" content="<%- metaImageURL %>" />
-
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="<%- metaTitle %>" />
-    <meta name="twitter:description" content="<%- metaDescription %>" />
-    <meta name="twitter:image" content="<%- metaImageURL %>" />
-    <%- googleAnalyticsScript %>
+    <meta name="twitter:title" content="Prabin Banstola" />
+    <meta name="twitter:description" content="This is the personal website of Prabin Banstola, showcasing my skills and projects." />
+    <meta name="twitter:image" content="/default-og-image.jpg" /> <!-- Replace with your image URL if needed -->
   </head>
   <body>
     <div id="root"></div>
